--- a/leetcode/Makefile
+++ b/leetcode/Makefile
@@ -1,5 +1,5 @@
 .PHONY : ALL
-ALL :  p1 p2 p3
+ALL :  p1 p2 p3 p4
 
 p1:
 	g++ -g -o p1 p1.cc
@@ -7,7 +7,9 @@ p2:
 	g++ -g -o p2 p2.cc
 p3:
 	g++ -g -o p3 p3.cc
+p4:
+	g++ -g -o p4 p4.cc
 
 .PHONY : clean
 clean : 
-	 rm -rf  p1 p2 p3
+	 rm -rf  p1 p2 p3 p4
